--- a/eapi-android-sample/app/build.gradle
+++ b/eapi-android-sample/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.fod.eapi.poc"
+        applicationId "com.sample.eapi"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
